<resources>
    <string name="app_name">Wallpaper Store</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Categories</string>
    <string name="title_notifications">Notifications</string>
    <string name="creatac">New user? Register here...</string>
    <!-- Categories -->
    <!-- Account -->
    <string name="Interstitial">ca-app-pub-6925096731283539/2584069308</string>
    <string name="ADMOB_APP_ID">ca-app-pub-6925096731283539~6967680217</string>
    <string name="banner_ad_unit_id">ca-app-pub-6925096731283539/2656722503</string>

    <string name="facebook_app_id">467217193846496</string>
    <string name="fb_login_protocol_scheme">fb467217193846496</string>
    <!-- Nav menu -->
    <string name="nav_menu1">Home</string>
    <string name="nav_menu2">Categories</string>
    <string name="nav_menu3">Favorite</string>
    <string name="nav_menu4">Settings</string>
    <string name="version">3.4.0</string>


    <string name="app_version">3.4.0</string>
    <string name="pref_header_about">About</string>
    <string name="pref_header_account">Account</string>
    <string name="summary_about">We are a team of like-minded people, specialized in development of Android App Development creating new trends across the app space. Glad to Help in anyway!</string>
    <string name="title_version">Version</string>
    <string name="key_send_feedback">key_send_feedback</string>
    <string name="title_faq">FAQ</string>
    <string name="summary_faq">View frequently asked questions</string>
    <string name="url_faq">https://dipanjanpanja.weebly.com/privacy-policy.html</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="url_privacy">https://dipanjanpanja.weebly.com/privacy-policy.html</string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="url_terms">https://dipanjanpanja.weebly.com/terms-of-service/</string>
    <string name="url_rate">market://details?id=com.softlink.wall</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="summary_logout">Redirect to Login Page</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="logout">Logout</string>
    <string name="title_rate">Ratings &amp; Review</string>
    <string name="title_moreapps">More Apps</string>
    <string name="app_moreapps">Download more Apps from SoftLik</string>
    <string name="key_logout">key_logout</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="user_name">user_name</string>
    <string name="user_email">user_email</string>
    <string name="key_user">key_user</string>
    <string name="key_update">key_update</string>
    <string name="key_rateapp">key_update</string>
    <string name="key_moreapps">key_moreapps</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>


    <string name="install_google_play_store" translatable="false">Please install google play store and then try again.</string>
    <string name="url_market_details" translatable="false">market://details?id=</string>
    <string name="url_playstore_app" translatable="false">https://play.google.com/store/apps/details?id=</string>
    <string name="url_market_search_app" translatable="false">market://search?q=pub:</string>
    <string name="url_playstore_search_app" translatable="false">http://play.google.com/store/search?q=pub:</string>
    <string name="app_link" translatable="false">https://play.google.com/store/apps/details?id=</string>


</resources>
